pkg/ibmvpc/examples/out/explain_out/vpeToIksNodeNoProtocolConn_all_vpcs_explain_debug.txt
Explaining connectivity from 192.168.40.5 (iks-clusterid:1[192.168.40.5]) to 192.168.0.4 (iks-node[192.168.0.4]) within ky-test-vpc using "protocol: ICMP"
==========================================================================================================================================================

No connections from iks-clusterid:1[192.168.40.5] to iks-node[192.168.0.4] using "protocol: ICMP";
connection is blocked by egress

Egress: security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 blocks connection; network ACL ky-test-edge-acl allows connection
Ingress: network ACL ky-test-private-2-others-acl allows connection; security group kube-clusterid:1 allows connection; security group ky-test-default-sg allows connection

Path:
	iks-clusterid:1[192.168.40.5] -> | security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Egress:
		security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 blocks connection since there are no relevant allow rules
		network ACL ky-test-edge-acl allows connection with the following allow rules
			index: 1, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

	Ingress:
		network ACL ky-test-private-2-others-acl allows connection with the following allow rules
			index: 0, direction: inbound , src: 192.168.32.0/20 , dst: 0.0.0.0/0, conn: all, action: allow
		security group kube-clusterid:1 allows connection with the following allow rules
			index: 6, direction: inbound,  conns: protocol: icmp,  icmpType: protocol: ICMP icmp-type: 8, remote: 0.0.0.0/0, local: 0.0.0.0/0
		security group ky-test-default-sg allows connection with the following allow rules
			index: 2, direction: inbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0

------------------------------------------------------------------------------------------------------------------------

* Analysis of the connectivity of cluster worker nodes is under the assumption that the only security groups applied to them are the VPC default and the IKS generated SG
